---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Improved performance of the matrix solver determining valid free items (thanks RSBat!)
  Bugfixes:
    - Fixed that the player character would show up as a valid mining machine

---------------------------------------------------------------------------------------------------
Version: 1.1.25
Date: 25. 08. 2021
  Changes:
    - Added better support for the Satisfactorio mod (thanks PFQNiet!)
  Bugfixes:
    - Fixed a crash with temporarily archived subfactories being deleted

---------------------------------------------------------------------------------------------------
Version: 1.1.24
Date: 24. 07. 2021
  Changes:
    - Updated the internal detection of recycling and barreling/stacking recipes to the current set of popular mods
  Bugfixes:
    - Fixed a crash with the utility dialog
    - Fixed a bug that prevent irrelevant free item choices being filtered out correctly

---------------------------------------------------------------------------------------------------
Version: 1.1.23
Date: 11. 07. 2021
  Features:
    - Added a button to the utility dialog to export the missing machines and modules as a series of constant combinators that can be hooked up to a requester chest
  Changes:
    - The mod now filters out crafting categories in the preferences dialog that don't have any recipes using them (removes the 'basic-crafting' category from vanilla maps)
  Bugfixes:
    - Fixed several matrix-solver related crashes (hopefully) that were introduced in the last version

---------------------------------------------------------------------------------------------------
Version: 1.1.22
Date: 10. 07. 2021
  Changes:
    - The mod now makes sure that the main interface fits onto the player's screen when first creating or joining a game