@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     - Improved performance of the matrix solver determining valid free items (thanks RSBat!)
   Bugfixes:
     - Fixed that the player character would show up as a valid mining machine
+    - Fixed a crash when using the utility dialog blueprint functionality with a large subfactory
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.25
